fixing index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
   </head>
   <body onload="run()">
-    <div style="text-align: center;  background-color: rgb(255, 207, 0);"><img src="media/images/logo.gif"></div>
+    <div style="text-align: center;  background-color: rgb(255, 207, 0);height:16%">
+	<img src="media/images/movie_logo.jpg" style="100%">
+    </div>
    <!-- <div class="loader" id="loader" style="display:none;"></div>-->
     <div class="content" id="images">
       <select id="img_cat" name="category" onchange="run()">
