--- a/index_appdemo-01.html
+++ b/index_appdemo-01.html
@@ -8,20 +8,23 @@
 
   </head>
   <body onload="run()">
-    <div style="text-align: center;  background-color: rgb(255, 207, 0);height:16%">
-	<img src="media/images/movie_logo.jpg" style="height:100%">
-    </div>
+    <div style="text-align: center;  background-color: rgb(255, 207, 0);"><img src="media/images/logo.gif"></div>
    <!-- <div class="loader" id="loader" style="display:none;"></div>-->
     <div class="content" id="images">
       <select id="img_cat" name="category" onchange="run()">
-        <option>Comedy</option>
-        <option>Horror</option>
-        <option>Thriller</option>
-        <option>Romance</option>
-        <option>Sci-fi</option>
-        <option>Fiction</option>
-        <option>Documentary</option>
-        <option>Crime</option>
+        <option>ART</option>
+        <option>ARCHITECTURE</option>
+        <option>CITY</option>
+        <option>CLASSIC</option>
+        <option>DISNEY</option>
+        <option>DOTS</option>
+        <option>DUPLO</option>
+        <option>FRIENDS</option>
+        <option>HARRYPOTTER</option>
+        <option>IDEAS</option>
+        <option>STARWARS</option>
+        <option>SUPERHEROS</option>
+        <option>TECHNIC</option>
       </select>
       <input type="file" onchange="showHide()" class="custom-file-input"><br><br>
       <div class="file-upload-class" style="display: none;">
