--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <option>Horror</option>
         <option>Thriller</option>
         <option>Romance</option>
-        <option>Sci-fi</option>
+        <option>Scifi</option>
         <option>Fiction</option>
         <option>Documentary</option>
         <option>Crime</option>
